<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center"
        android:text="@string/difficulty"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFAAAA"
        android:text="@string/easy" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF6666"
        android:text="@string/medium" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/hard" />

    <TextView
        android:id="@+id/high_scores"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:text="@string/highScores"
        android:textAlignment="center" />

</LinearLayout>
