<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/play_game_fragment_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="edu.umsl.simon.PlayGameFragment">-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/startGame" />

        <TextView
            android:id="@+id/highScore"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center"
            android:text="@string/highScore"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/currentScore"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="Current Score"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:text="@string/red" />

        <Button
            android:id="@+id/buttonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:text="@string/green" />

        <Button
            android:id="@+id/buttonOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/orange" />

        <Button
            android:id="@+id/buttonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/blue" />

    </LinearLayout>


<!--</FrameLayout>-->
